--- a/pages/produto.html
+++ b/pages/produto.html
@@ -3,21 +3,77 @@
     <head>
         <meta charset = "UTF-8">
         <meta name = "viewport" content="width = device-width, initial-scale = 1.0">
-        <link rel="stylesheet" href = "./styles/reset.css">
-        <link rel="stylesheet" href = "./styles/base.css">
+        <link rel="stylesheet" href = "/reset.css">
+        <link rel="stylesheet" href = "/base.css">
+        <link rel = "stylesheet" href="/styles/home/cabecalho-home.css">
+        <link rel="stylesheet" href="/styles/home/contato-home.css">
+        <link rel="stylesheet" href="/styles/home/rodape-home.css">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
         <title>Alura Geek | Produto</title>
     </head>
     <body>
-        <header class = "cabecalho">
-
+        <header class = "cabecalho__container">
+            <nav>
+                <div class = "cabecalho__div">
+                    <a href="/pages/index.html"><img class="cabecalho__titulo" src="/assets/Logo.png" alt="logo Alura geek"></a>
+                    <div class="input">
+                        <input class="cabecalho__input" type="search" placeholder="O que deseja encontrar?">
+                        <button class="input__bt"><i class="input__serach"><img src="/assets/Icone.svg"></i></button>
+                    </div>
+                </div>
+            </nav>
         </header>
-        <section></section>
-        <section></section>
-    </body>
-    <footer>
-        <section class = "rodape">
+        <section class="produto">
+            <div class="titulo__produto">
+                <span>Todos os produtos</span>
+                <a href="/pages/produtos.html">
+                    <button>Adicionar Produto</button>
+                </a>
+             </div>
+        </section>
+
+        <section class="sessao__produtos" data-todos-os-produtos>
 
         </section>
-    </footer>
+
+        <section class = "contato">
+            <div class = "contato__formulario">
+                <div class= "contato__imagem">
+                    <img class = "contato__img" src="/assets/Logo.png">
+                </div>
+                <div class="links__uteis">
+                    <a href="#" class="link__item">Quem somos nós</a>
+                    <a href="#" class="link__item">Política de privacidade</a>
+                    <a href="#" class="link__item">Programa de fidelidade</a>
+                    <a href="#" class="link__item">Nossas lojas</a>
+                    <a href="#" class="link__item">Quero ser franqueado</a>
+                    <a href="#" class="link__item">Anuncie aqui</a>
+                </div>
+                <div class = "contato__texto">
+                    <div class="contato__titulo">Fale conosco</div>
+                    <form class="formulario">
+                        <fieldset class="formulario__campo">
+                            <input class="formulario__input" type="text" minlength="3" maxlength="50"  placeholder="Nome" required>
+                        </fieldset>
+                        <fieldset class="formulario__campo">
+                            <input class="formulario__input" type="text" minlength="5" maxlength="50"  placeholder="Assunto" required>
+                        </fieldset>
+                        <fieldset class="formulario__campo">
+                            <textarea class="formulario__textarea" minlength="15" maxlength="300" placeholder="Escreva sua mensagem" required></textarea>
+                        </fieldset>
+                        <fieldset>
+                            <button class="formulario__botao">Enviar mensagem</button>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+
+        </section>
+        <footer class = "rodape">
+            <div class="rodape__descricao">
+                <p>Desenvolvido por Vívian Alkmim</p>
+                <p>2023</p>
+            </div>
+        </footer>
+    </body>
 </html>
