--- a/pages/index.html
+++ b/pages/index.html
@@ -68,7 +68,7 @@
                             <input class="formulario__input" type="text" minlength="5" maxlength="50"  placeholder="Assunto" required>
                         </fieldset>
                         <fieldset class="formulario__campo">
-                            <textarea class="formulario__textarea" minlength="15" maxlength="300" id= placeholder="Escreva sua mensagem" required></textarea>
+                            <textarea class="formulario__textarea" minlength="15" maxlength="300" placeholder="Escreva sua mensagem" required></textarea>
                         </fieldset>
                         <fieldset>
                             <button class="formulario__botao">Enviar mensagem</button>
@@ -88,7 +88,7 @@
             </div>
         </footer>
 
-        <script type="module" src="../controllers/produto-controllers.js"></script>
+        <script type="module" src="../controllers/produto-controller.js"></script>
 
     </body>
     
