--- a/pages/produtos-home.html
+++ b/pages/produtos-home.html
@@ -27,7 +27,7 @@
         <section class="lista__produtos">
                 <div class="lista">
                  <h2 class="lista__titulo">Todos os produtos</h2>
-                 <a href="/pages/produtos.html"><button class="lista__botao">Adicionar produto</button></a> 
+                 <a href="/pages/adicionar-produtos.html"><button class="lista__botao">Adicionar produto</button></a> 
                 </div>
                 <div class="produtos__itens" data-produto></div>
         </section>
@@ -72,7 +72,7 @@
             </div>
         </footer>
 
-        <script type="module" src="/controllers/produto-controllers.js"></script>
+        <script type="module" src="../controllers/produtos-listados.js"></script>
 
     </body>
 </html>
